--- a/scss/main.scss
+++ b/scss/main.scss
@@ -890,32 +890,107 @@
  *
  * ------------------------------------------------------------------- */
 
-.footer-sec {
-  border-radius: 0;
-  background-color: #fff;
-  margin: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-  i:hover {
-    color: #000;
-  }
-}
+ .footer-sec {
+   background-color: #fff;
+   margin: 0;
+ }
 
-.footer-about {
-  margin-top: 10px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.2rem;
-  color: #000;
-}
+ .footer {
+   width: 100%;
+   position: relative;
+   height: auto;
+   background-color: #fff;
+ }
+ .footer .col {
+   width: 190px;
+   height: auto;
+   float: left;
+   box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   padding: 0px 20px 20px 20px;
+ }
+ .footer .col h1 {
+   margin: 0;
+   padding: 0;
+   font-family: inherit;
+   font-size: 12px;
+   line-height: 17px;
+   padding: 20px 0px 5px 0px;
+   color: #000;
+   font-weight: normal;
+   text-transform: uppercase;
+   letter-spacing: 0.250em;
+ }
+ .footer .col ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+ }
+ .footer .col ul li {
+   color: #999999;
+   font-size: 14px;
+   font-family: inherit;
+   font-weight: bold;
+   padding: 5px 0px 5px 0px;
+   cursor: pointer;
+   transition: .2s;
+   -webkit-transition: .2s;
+   -moz-transition: .2s;
+ }
+ .social ul li {
+   display: inline-block;
+   padding-right: 5px !important;
+ }
 
-.copyright {
-  color: #000;
-  padding: 20px;
-  margin: 20px;
-  a {
-    &:hover {
-      text-decoration: line-through;
-      color: #000;
-    }
-  }
-}
+ .footer .col ul li:hover {
+   color: #000;
+   transition: .1s;
+   -webkit-transition: .1s;
+   -moz-transition: .1s;
+ }
+ .clearfix {
+   clear: both;
+ }
+ @media only screen and (min-width: 1280px) {
+   .contain {
+     width: 1200px;
+     margin: 0 auto;
+   }
+ }
+ @media only screen and (max-width: 1139px) {
+   .contain .social {
+     width: 1000px;
+     display: block;
+   }
+   .social h1 {
+     margin: 0px;
+   }
+ }
+ @media only screen and (max-width: 950px) {
+   .footer .col {
+     width: 33%;
+   }
+   .footer .col h1 {
+     font-size: 14px;
+   }
+   .footer .col ul li {
+     font-size: 13px;
+   }
+ }
+ @media only screen and (max-width: 500px) {
+     .footer .col {
+       width: 50%;
+     }
+     .footer .col h1 {
+       font-size: 14px;
+     }
+     .footer .col ul li {
+       font-size: 13px;
+     }
+ }
+ @media only screen and (max-width: 340px) {
+   .footer .col {
+     width: 100%;
+   }
+ }
