--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ p {
 }
 
 .wrapper {
-  background-color: #fff;
+  background-color: #F3F4F5;
 }
 @media (min-width: 992px) {
   .wrapper {
@@ -129,7 +129,7 @@ p {
 }
 
 #site-content {
-  background-color: #fff;
+  background-color: #F3F4F5;
 }
 
 /* ===================================================================
@@ -208,7 +208,7 @@ header {
   left: 0;
   width: 100%;
   padding: 0.5rem 0em 0em 0em;
-  background: white;
+  background: #F3F4F5;
   z-index: 3;
   will-change: transform;
   transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
@@ -299,7 +299,7 @@ ul.menu-left.collapse {
   margin-bottom: 0px;
   height: calc(95vh);
   text-align: center;
-  background-color: #fff;
+  background-color: #F3F4F5;
 }
 
 .heading {
@@ -568,64 +568,6 @@ ul.menu-left.collapse {
   right: 0;
   padding: 0;
 }
-.photo-me .heading1 h1 {
-  margin: 10px;
-  font-size: 2em;
-  color: #fff;
-}
-
-.about {
-  background-color: #fff;
-  margin-left: 70px;
-  position: relative;
-}
-.about .heading2 {
-  text-align: right;
-  width: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: rotate(-270deg);
-  transform-origin: 0 0;
-}
-.about .heading2 p {
-  margin-top: 10px;
-}
-.about .heading2 h1 {
-  color: #333745;
-  font-size: 4em;
-}
-
-.smallHeader {
-  font-family: "Playfair Display", serif;
-  color: #000;
-  padding: 20px;
-}
-@media (min-width: 576px) {
-  .smallHeader {
-    margin: 0 50px 0 50px;
-  }
-}
-@media (min-width: 768px) {
-  .smallHeader {
-    margin: 0 100px 0 100px;
-  }
-}
-
-.about-wrap .bold {
-  font-weight: 800;
-  font-family: "Open Sans", sans-serif;
-}
-@media (min-width: 576px) {
-  .about-wrap {
-    margin: 0 50px 0 50px;
-  }
-}
-@media (min-width: 768px) {
-  .about-wrap {
-    margin: 0 100px 0 100px;
-  }
-}
 
 /* ===================================================================
  * # works styles
@@ -653,33 +595,6 @@ ul.menu-left.collapse {
   }
   .works-wrap h2 {
     font-size: 3em;
-  }
-}
-
-.works-wrap-two {
-  background-color: #fff;
-  padding: 40px 40px 40px 40px;
-  position: relative;
-  text-align: center;
-}
-.works-wrap-two:before, .works-wrap-two:after {
-  content: "";
-  display: inline-block;
-  height: 1px;
-  border-top: 2px solid #ffcd05;
-  position: relative;
-  vertical-align: middle;
-  width: 50%;
-  top: -2px;
-}
-.works-wrap-two p {
-  font-family: "Playfair Display", serif;
-  font-size: 0.8rem;
-  color: #000;
-}
-@media (min-width: 768px) {
-  .works-wrap-two p {
-    font-size: 1em;
   }
 }
 
@@ -727,13 +642,13 @@ ul.menu-left.collapse {
 .img-prjct {
   border-radius: 0px;
   max-width: 100%;
+  margin: 0;
   height: auto;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  display: table;
   position: relative;
   padding-left: 1em;
   padding-right: 1em;
@@ -766,10 +681,6 @@ ul.menu-left.collapse {
   color: #161616;
   font-weight: 700;
   max-width: 100%;
-}
-
-.prjct {
-  padding-right: 0;
 }
 
 /*** THE END HOME PAGE PROJECT COVER ***/
