--- a/scss/main.scss
+++ b/scss/main.scss
@@ -128,7 +128,7 @@
 
  a {
    text-decoration: none;
-   color: #000;
+   color: #fff;
    &:hover {
      color: #555;
    }
@@ -136,15 +136,7 @@
 
  a:link {
    text-decoration: none;
-   color: #000;
- }
- a:visited {
-   text-decoration:none;
-   color: #000;
- }
- a:active {
-   text-decoration:none;
-   color: #000;
+   color: #fff;
  }
 
  h1 {
@@ -167,7 +159,7 @@
  }
 
  .wrapper {
-   background-color: #F3F4F5;
+   background-color: #1C1B20;
    @include media-breakpoint-up(lg) {
      padding: 0 2em 2em 2em;
      padding-bottom: 0px;
@@ -187,7 +179,7 @@
  * ## header logo
  * ------------------------------------------------------------------- */
  .header-logo {
-   background-color: black;
+   background-color: #1C1B20;
    justify-content: center;
    align-items: center;
    padding: 0;
@@ -195,7 +187,7 @@
    height: 70px;
    display: flex;
    span {
-     color: white;
+     color: #F3F4F5;
      font-family: 'raiderfont';
      line-height: 0.9em;
    }
@@ -204,8 +196,6 @@
 /* -------------------------------------------------------------------
  * ## main navigation
  * ------------------------------------------------------------------- */
-
- $text-color: #000;
 
  // LINKS RESET
  a {
@@ -259,7 +249,7 @@
    left: 0;
    width: 100%;
    padding: .5rem 0em 0em 0em;
-   background: #F3F4F5;
+   background: #1C1B20;
    z-index: 3;
    will-change: transform;
    transition: background .3s,
@@ -354,11 +344,15 @@
     margin-bottom: 0px;
     height: calc(95vh);
     text-align: center;
-    background-color: #F3F4F5;
+
+    background-color: #302f34;
+
+
+    background-attachment: fixed;
   }
 
   .heading {
-    color: black;
+    color: #000;
     position: relative;
     top: 40%;
     max-height: 700px;
@@ -415,8 +409,13 @@
    * ## socials
    * ------------------------------------------------------------------- */
 
+   .socials {
+     display: none;
+   }
+
    @include media-breakpoint-up(lg) {
      .socials {
+       display: block;
        position: absolute;
        top: 40%;
        left: 0;
@@ -630,61 +629,15 @@
 }
 
 /* ===================================================================
- * # about styles
- *
- * ------------------------------------------------------------------- */
-
- .photo-me {
-   margin: 0;
-   position: relative;
-   height: 400px;
-   background-color: #333745;
-   .heading1 {
-     margin-left: 0;
-     width: 80px;
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     right: 0;
-     padding: 0;
-   }
- }
-
-
-
-/* ===================================================================
  * # works styles
  *
  * ------------------------------------------------------------------- */
-
- .works-wrap  {
-   text-align: center;
-   background-color: #fff;
-   margin: 0;
-   h2 {
-     background-color: #ffcd05;
-     font-family: 'raiderfont';
-     font-size: 2.5em;
-     color: black;
-   }
-   @include media-breakpoint-up(sm) {
-     h2 {
-       width: 280px;
-     }
-   }
-   @include media-breakpoint-up(md) {
-     padding: 0;
-     h2 {
-       font-size: 3em;
-     }
-   }
- }
 
  .works-sec {
    color: #515056;
    border-radius: 0;
    text-align: center;
-   background-color: #fff;
+   background-color: #1c1b20;
    margin: 100px 0 0 0;
  }
 
@@ -748,21 +701,25 @@
 }
 
 .prjct-wrt-right {
+  background-color: #ffcd05;
    position: absolute;
    right: 3%;
    top: 9%;
+   font-family: 'raiderfont';
    font-size: 2.6em;
-   color: #161616;
+   color: #000;
    font-weight: 700;
    max-width: 100%;
 }
 
 .prjct-wrt-left {
+  background-color: #ffcd05;
    position: absolute;
    left:3%;
    top:9%;
+   font-family: 'raiderfont';
    font-size: 2.6em;
-   color: #161616;
+   color: #000;
    font-weight: 700;
    max-width: 100%;
 }
@@ -812,7 +769,7 @@
  * ------------------------------------------------------------------- */
 
  .footer-sec {
-   background-color: #fff;
+   background-color: #1c1b20;
    margin: 0;
  }
 
@@ -820,7 +777,7 @@
    width: 100%;
    position: relative;
    height: auto;
-   background-color: #fff;
+   background-color: #1c1b20;
  }
  .footer .col {
    width: 190px;
