--- a/scss/main.scss
+++ b/scss/main.scss
@@ -323,7 +323,7 @@
       position: absolute;
       width: 80px;
       height: 200px;
-      background-color: #E8BB05;
+      background-color: #A54314;
       @media (min-width: 460px) {
         left: 30%;
         width: 100px;
@@ -345,7 +345,7 @@
     padding: 0.2em;
     padding-top: 0;
     padding-bottom: 0;
-    color: #E8BB05;
+    color: #A54314;
     span {
       color: #000;
     }
@@ -384,7 +384,7 @@
        z-index: 3;
        width: 3em;
        i {
-         margin-top: 1em;
+         margin: 1em;
        }
      }
 
@@ -605,7 +605,7 @@
 .about {
   text-align: left;
   position: absolute;
-  top: 40%;
+  top: 35%;
   right: 10%;
   a {
     color: #000;
@@ -740,6 +740,9 @@
      i {
        font-size: 2em;
        margin: 10px;
+       &:hover {
+         color: #01A7B7;
+       }
      }
      @include media-breakpoint-up(sm) {
        i {
