updated home page

--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,6 @@
  *
  * ------------------------------------------------------------------- */
 @font-face {
-  font-family: "gligoth";
-  src: url(fonts/gligoth.ttf);
-}
-@font-face {
   font-family: "raiderfont";
   src: url(fonts/raiderfont.ttf);
 }
@@ -34,7 +30,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #555;
+  color: #1C1B20;
 }
 a:hover {
   color: #000;
@@ -42,7 +38,7 @@ a:hover {
 
 a:link {
   text-decoration: none;
-  color: #555;
+  color: #000;
 }
 
 h1 {
@@ -50,12 +46,14 @@ h1 {
 }
 
 h2 {
-  font-family: "Playfair Display", serif;
+  font-family: "raiderfont";
+  color: #1C1B20;
+  margin-bottom: 1em;
 }
 
-h3, h4 {
+h3, h4, h5 {
   font-family: "Playfair Display", serif;
-  color: #000;
+  color: #1C1B20;
 }
 
 p {
@@ -90,11 +88,12 @@ p {
   justify-content: center;
   align-items: center;
   padding: 0;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   display: flex;
 }
 .header-logo span {
+  font-size: 0.85rem;
   color: #fff;
   font-family: "raiderfont";
   line-height: 0.9em;
@@ -121,8 +120,8 @@ a:hover, a :focus {
   display: block;
   position: absolute;
   left: 0;
-  bottom: 0;
-  height: 6px;
+  bottom: -15px;
+  height: 5px;
   width: 0;
   transition: width 0s ease, background 0.35s ease;
 }
@@ -131,8 +130,8 @@ a:hover, a :focus {
   display: block;
   position: absolute;
   right: 0;
-  bottom: 0;
-  height: 3px;
+  bottom: -15px;
+  height: 5px;
   width: 0;
   background: #ffcd05;
   transition: width 0.35s ease;
@@ -181,11 +180,13 @@ header nav .logo:after {
 }
 header nav ul {
   float: right;
-  font-family: "gligoth", sans-serif;
-  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+  font-size: 0.65rem;
   list-style: none;
   padding-left: 0;
-  margin: 11.1px 0;
+  margin: 0;
+  height: 50px;
 }
 header nav ul li {
   margin: 0.5em;
@@ -199,7 +200,7 @@ header nav ul li {
 }
 header nav ul li a {
   display: block;
-  padding: 2px;
+  padding: 15px 0 15px 0;
 }
 
 .hide-nav {
@@ -320,6 +321,32 @@ ul.menu-left.collapse {
     transform: translate3d(-90px, 0, 0);
   }
 }
+/* ===================================================================
+ * # about styles
+ *
+ * ------------------------------------------------------------------- */
+.about {
+  text-align: left;
+  position: absolute;
+  top: 35%;
+  right: 10%;
+}
+.about a {
+  color: #000;
+  font-family: "Playfair Display", serif;
+}
+
+.underline--magical {
+  background-image: linear-gradient(120deg, #E8BB05 0%, #FFD11B 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.4em;
+  background-position: 0 88%;
+  transition: background-size 0.25s ease-in;
+}
+.underline--magical:hover {
+  background-size: 100% 88%;
+}
+
 /* -------------------------------------------------------------------
  * ## socials
  * ------------------------------------------------------------------- */
@@ -518,31 +545,6 @@ ul.menu-left.collapse {
 }
 .trail--bottom.trail--animation-hover:hover::after {
   animation: trail-animation-bottom 2s infinite;
-}
-
-/* ===================================================================
- * # about styles
- *
- * ------------------------------------------------------------------- */
-.about {
-  text-align: left;
-  position: absolute;
-  top: 35%;
-  right: 10%;
-}
-.about a {
-  color: #000;
-}
-
-.underline--magical {
-  background-image: linear-gradient(120deg, #E8BB05 0%, #FFD11B 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.4em;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in;
-}
-.underline--magical:hover {
-  background-size: 100% 88%;
 }
 
 /* ===================================================================
